# padel-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
src/: config.py  main.py  security.py
src/controllers/: availabilites.py  db.py  models.py  reservation_relations.py  reservations.py  users.py
src/routers/: availabilities.py  reservations.py  users.py
src/schemas/: availabilities.py  reservations.py  users.py
src/utils/: notifications.py
